# wargame

./: pyproject.toml  run.py
wargame_project/: __init__.py  alliance.py  board.py  drawing.py  game.py  team.py
wargame_project/units/: unit.py
