[tool.poetry]
name = "wargame-project"
version = "0.1.0"
description = ""
authors = ["Cédric Maigrot <maigrot.cedric@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
